--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -16,3 +16,7 @@ services:
     networks:
       - ai_network
     command: python manage.py runserver 0.0.0.0:2000
+
+networks:
+  ai_network:
+    driver: bridge
